<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_detail_item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_detail_item_photo" />

        <TextView
            android:id="@+id/tv_detail_item_name"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="2dp"
            android:text="@string/games_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/img_detail_item_photo" />

        <ImageView
            android:id="@+id/img_detail_item_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_detail_score"
            style="@style/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/review"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_item_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_item_name" />

        <TextView
            android:id="@+id/tv_detail_game_score"
            style="@style/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:text="@string/game_review"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_score"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_score"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_item_name"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            style="@style/character"
            android:id="@+id/tv_detail_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:padding="4dp"
            android:text="@string/character"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_score"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_score" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:text="@string/share"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_character"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_character" />

        <Button
            android:id="@+id/action_trailer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/watch_trailer"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_item_description"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_item_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_item_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>